--- a/EcommerceBack/Views/CarrinhoCompras/CarrinhoCompras.cshtml
+++ b/EcommerceBack/Views/CarrinhoCompras/CarrinhoCompras.cshtml
@@ -83,7 +83,7 @@
                     <br>
                     <br>
 
-                    <button class="btn-add-endereco" id="btn-endereco" onclick="selecionarBtn(this)">
+                    <button class="btn-add-endereco" id="btn-endereco">
                         <div id="icone">
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
