--- a/EcommerceBack/Views/PainelAdministrador/PainelAdministrador.cshtml
+++ b/EcommerceBack/Views/PainelAdministrador/PainelAdministrador.cshtml
@@ -1,4 +1,8 @@
-﻿<body onload="carregarValorCarrinho()">
+﻿@{
+    ViewData["Title"] = "PainelAdministrador";
+}
+
+<body>
     <nav class="navbar navbar-expand-lg navbar-light custom-navbar justify-content-between">
         <div class="container">
             <ul class="navbar-nav">
@@ -30,9 +34,9 @@
 
     <div class="container-painelAdm">
         <div class="painelAdm">
-            <a href=""><button class="btn-azul-adm" onclick="">Gerenciar clientes</button></a>
-            <a href=""><button class="btn-azul-adm" onclick="">Gerenciar pedidos</button></a>
-            <a href=""><button class="btn-azul-adm" onclick="">Analisar vendas</button></a>
+            <a class="ancora-adm" href="@Url.Action("Cliente", "Cliente")"><button class="btn-azul-adm" id="gerencia-clientes" onclick="">Gerenciar Clientes</button></a>
+            <a class="ancora-adm" href="@Url.Action("PedidoAdmin", "PedidoAdmin")"><button class="btn-verde-adm" id="gerencia-pedidos" onclick="">Gerenciar Pedidos</button></a>
+            <a class="ancora-adm" href="@Url.Action("AnaliseVendas", "AnaliseVendas")"><button class="btn-cinza-adm" id="analisa-vendas" onclick="">Analisar Vendas</button></a>
         </div>
     </div>
 
