--- a/EcommerceBack/Views/PainelAdministrador/PainelAdministrador.cshtml
+++ b/EcommerceBack/Views/PainelAdministrador/PainelAdministrador.cshtml
@@ -7,13 +7,19 @@
         <div class="container">
             <ul class="navbar-nav">
                 <li class="nav-item nav-item-cart">
-                    <a class="nav-link custom-link" style="color: white;" href="index.html"><i class="fas fa-home"></i> Tela inicial</a>
+                    <a class="nav-link custom-link" style="color: white;" href="@Url.Action("PaginaInicial", "PaginaInicial")"><i class="fas fa-home"></i> Tela inicial</a>
                 </li>
 
                 <li class="nav-item nav-item-cart">
-                    <a class="nav-link custom-link" style="color: white;" href="carrinho_compras.html">
+                    <a class="nav-link custom-link" style="color: white;" href="@Url.Action("CarrinhoCompras", "CarrinhoCompras")">
                         <i class="fas fa-shopping-cart"><span id="quantidade-item-cart">0</span></i>
                         Carrinho
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <input type="text" class="form-control search-input" placeholder="Pesquisar produtos...">
                     </a>
                 </li>
             </ul>
@@ -21,7 +27,7 @@
         <div class="navbar-nav navbar-nav-right">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" style="color: white;" href="pedidos_status_cliente.html"><i class="fas fa-file-alt"></i> Pedidos</a>
+                    <a class="nav-link" style="color: white;" href="@Url.Action("PedidosCliente", "PedidosCliente")"><i class="fas fa-file-alt"></i> Pedidos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" style="color: white;" href="#"> Login <i class="fas fa-user"></i></a>
