--- a/EcommerceBack/Views/PedidoAdmin/PedidoAdmin.cshtml
+++ b/EcommerceBack/Views/PedidoAdmin/PedidoAdmin.cshtml
@@ -18,6 +18,12 @@
                         Carrinho
                     </a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <input type="text" class="form-control search-input" placeholder="Pesquisar produtos...">
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="navbar-nav navbar-nav-right">
