senha e confirmação de senha

--- a/EcommerceBack/Views/Cliente/Cliente.cshtml
+++ b/EcommerceBack/Views/Cliente/Cliente.cshtml
@@ -123,6 +123,12 @@
                 <label for="emailCliente" class="label-blue">Email do Cliente</label>
                 <input type="email" id="emailCliente" class="form-control input-card" placeholder="Digite o email do cliente" required>
 
+                <label for="senha" class="label-blue">Senha</label>
+                <input type="password" id="senha" class="form-control input-card" placeholder="Digite a senha" required>
+
+                <label for="confirmarSenha" class="label-blue">Confirmar Senha</label>
+                <input type="password" id="confirmarSenha" class="form-control input-card" placeholder="Confirme a senha" required>
+
                 <label for="cpfCliente" class="label-blue">CPF</label>
                 <input type="text" id="cpfCliente" class="form-control input-card" maxlength="11" required>
 
