--- a/EcommerceBack/Views/Shared/_Layout.cshtml
+++ b/EcommerceBack/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!--
-    <header> -->
+    <header> 
        
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -72,6 +72,8 @@
             </div>
         </nav>
     </header>
+
+    -->
         
         <main role="main" class="pb-3">
             @RenderBody()
